--- a/CSS styles/profile.css
+++ b/CSS styles/profile.css
@@ -6,7 +6,7 @@
   padding-bottom: 140px;
   width: 100%;
   background-color: rgb(0, 0, 0);
-  background-image: url('../imgs/profile.jpg');
+  background-image: url('../imgs/profile.png');
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
